--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ main{
 
 .header-content h2 span{
   color: #f1c11a;
-  line-height: 100px;
+  /*line-height: 100px;*/
 }
 
 .btn{
@@ -239,61 +239,53 @@ footer{
 
 	.header-content h2{
     font-size: 10px;
+    line-height: 15px;
+    margin: 10px;
+  
 }
   .btn{
-  background-color: transparent;
-  border: 1px solid #ffffff;
-  padding: 7px 20px;
-  font-weight: bolder;
-  text-decoration: none;
-  color: #ffffff;
-  margin-right: 12px;
-  transition: all 400ms ease-in-out;
-}
-.btn-fill{
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.btn-fill:hover{
-  background-color: #f1c11a;
-  border-color: transparent;
-}
-
-.btn-trans:hover{
-  background-color: #f1c11a;
-  color: #000000;
-  border-color: transparent;
+  padding: 5px 15px;
+  
 }
  }
 
-}
 @media screen and ( max-width:425px){
 	.header {
-		line-height:40px;
+		line-height:35px;
 
 	}
 	  .header-content h2{
 	
-  	font-size: 12px;
+  	font-size: 15px;
+  	line-height: 20px;
+  	margin: 20px;
+ 
   }
 }
 @media screen and ( max-width:360px){
 	.header-content h2{
-         font-size: 10px;
+         font-size: 15px;
+         line-height: 20px;
+         margin: 20px;
 	}
 	.btn{
 		padding: 5px 15px;
 	}
 
 @media screen and (max-width: 320px){
+	.header{
+		line-height: 40px;
+	}
 	  .header-content h2{
 	
-  	font-size: 9px;
+  	font-size: 15px;
+  	line-height: 20px;
+  	margin: 20px;
+
   }
 
 .btn{
-	padding: 5px 10px;
+	padding: 5px 8px;
 	}
 }
   
